[package]
name = "pntfy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
qrcode = { version = "0.14.0", default-features = false }
reqwest = { version = "0.12.4", default-features = false, features = ["blocking"] }
shell-words = "1.1.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
